# rmbg-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: docker-publish.yml
nix/: package.nix
src/: index.html  main.rs
