[package]
name = "rmbg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
bytes = "1.6.0"
eyre = "0.6.12"
image = "0.25.1"
rmbg = { version = "0.1.0", default-features = false }
ort = { version = "2.0.0-rc.2", features = ["download-binaries"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
